# suil

./: .clang-format  .clang-tidy  .clant.json  .git-blame-ignore-revs  .gitignore  .includes.imp  AUTHORS  COPYING  ChangeLog  INSTALL.md  NEWS  PACKAGING.md  README  README.md  meson.build  meson_options.txt  suil.pc.in  suil.ttl  waf  wscript
.reuse/: dep5
LICENSES/: 0BSD.txt  ISC.txt
doc/: Doxyfile.in  conf.py.in  index.rst  meson.build  overview.rst  reference.doxygen.in  suil.rst  summary.rst
doc/api/: meson.build
doc/c/: Doxyfile  Doxyfile.in  index.rst  meson.build  overview.rst  reference.rst  wscript
doc/c/api/: meson.build
doc/c/xml/: meson.build
doc/html/: meson.build
doc/singlehtml/: meson.build
doc/xml/: meson.build
include/suil/: suil.h
meson/suppressions/: meson.build
meson/warnings/: meson.build
src/: cocoa_in_gtk2.mm  cocoa_in_qt5.mm  dylib.h  gtk2_in_qt4.cpp  gtk2_in_qt5.cpp  host.c  instance.c  qt4_in_gtk2.cpp  qt5_in_gtk.cpp  qt5_in_gtk2.cpp  suil_config.h  suil_internal.h  uis.c  warnings.h  win_in_gtk2.c  win_in_gtk2.cpp  x11.c  x11_in_gtk2.c  x11_in_gtk3.c  x11_in_qt.cpp  x11_in_qt4.cpp  x11_in_qt5.cpp  x11_in_qt6.cpp  x11_util.c  x11_util.h
suil/: suil.h
test/headers/: .clang-tidy  meson.build  test_headers.c
